fix: overflow

--- a/src/components/Message/index.module.scss
+++ b/src/components/Message/index.module.scss
@@ -7,6 +7,7 @@
   gap: 10px;
   padding: 30px;
   width: 90%;
+  transform: rotate(-180deg);
   .userImg {
     border-radius: 100%;
     border: none;
